Fixed CSS on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html {
+    font-size: 16px;
+}
+
 body, h2, h3, h4 {
     margin: 0;
     padding: 0;
 }
 
 body {
+    text-align: center;
     text-transform: uppercase;
     font-family: 'Roboto Mono', monospace;
 }
@@ -71,5 +76,11 @@ a:hover svg {
 
     svg {
         fill: #FFFFF2;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    html {
+        font-size: 8px;
     }
 }
